# cpp-assignment

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: Actor.h  Book.h  DVD.h  Director.h  Journal.h  Library.h  MusicCD.h  Person.h  Publication.h  Student.h  Track.h
src/: Actor.cpp  Book.cpp  DVD.cpp  Director.cpp  Journal.cpp  Library.cpp  MusicCD.cpp  Person.cpp  Publication.cpp  Student.cpp  Track.cpp
